Optimise i18n messages